testsuite/poke.pkl/arrays-index-diag-5.pk
/* { dg-do compile } */

(Exception{})[2]; /* { dg-error "invalid operator to.*\n.*expected array or string" } */
